--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,15 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+.callout{
+  border-left: 5px solid #a2a9af;
+  margin: 10px;
+  padding-left: 10px;
+}
+.callout_yellow{
+  border-left: 5px solid #a2a9af;
+  margin: 10px;
+  padding-left: 10px;
+  background-color: rgb(247, 247, 158);
+}
